[project]
name = "fastapi-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi[standard]>=0.126.0",
    "greenlet>=3.3.1",
    "pwdlib[argon2,bcrypt]>=0.3.0",
    "pyjwt>=2.10.1",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "sqlalchemy[asyncio]>=2.0.46",
    "sqlmodel[asyncio]>=0.0.34",
]
