[project]
name = "fastapi-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.126.0",
    "psycopg2>=2.9.11",
    "pwdlib[argon2,bcrypt]>=0.3.0",
    "pyjwt>=2.10.1",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "sqlalchemy[asyncio]>=2.0.46",
    "sqlmodel>=0.0.34",
]
